[package]
name = "rayball-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "*", features = ["rustls-tls-webpki-roots"] }
chrono = "0.4.42"
deflate = "1.0.0"
haversine = "0.2.1"
minreq = "2.14.1"
raylib = { version = "5.5.1", default-features = false, features = ["opengl_21"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
webrtc = "0.14.0"
rustls = {version = "0.23.36", features = ["ring"]}
clipboard-rs = "0.3.1"
regex-lite = "0.1.8"
url = "2.5.8"

[profile.release]
opt-level = "z"
codegen-units = 1
debug = false
panic = "abort"
lto = true
strip = "symbols"
