[package]
name = "rayball-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
deflate = "1.0.0"
haversine = "0.2.1"
minreq = "2.14.1"
raylib = { version = "5.5.1", default-features = false}
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
webrtc = "0.14.0"
rustls = {version = "0.23.36", features = ["ring"]}
clipboard-rs = "0.3.1"
regex-lite = "0.1.8"
url = "2.5.8"
futures = "0.3.31"
p256 = "0.13.2"
rand_core = "0.9.5"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.11.0"
leb128 = "0.2.5"
ezsockets = { version = "0.7.1", features = ["client"] }
async-trait = "0.1.89"

[profile.release]
opt-level = "z"
codegen-units = 1
debug = false
panic = "abort"
lto = true
strip = "symbols"
